Bug 87414 - error opening ATTR{/sys/devices/pci0000:00/0000:00:1a.0/usb1/1-1/1-1.3/1-1.3:1.0/power/control} for writing
Summary: error opening ATTR{/sys/devices/pci0000:00/0000:00:1a.0/usb1/1-1/1-1.3/1-1.3:...
Status: RESOLVED FIXED
Alias: None
Product: libfprint
Classification: Unclassified
Component: libfprint (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: libfprint-bugs
QA Contact:
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2014-12-17 13:38 UTC by Rex Dieter
Modified: 2015-01-28 15:31 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
proof-of-concept patch to add TEST=power/control" to udev rules (1.17 KB, patch)
2014-12-17 13:38 UTC, Rex Dieter
Details | Splinter Review

Description Rex Dieter 2014-12-17 13:38:44 UTC
Created attachment 110952 [details] [review]
proof-of-concept patch to add TEST=power/control" to udev rules

Per downstream report,
https://bugzilla.redhat.com/show_bug.cgi?id=950205

libfprint udev rules try to set ATTR{power/control} without testing for existence first with TEST=="power/control".
Comment 1 Rex Dieter 2015-01-05 15:49:55 UTC
ping?
Comment 2 Rex Dieter 2015-01-21 15:28:43 UTC
another couple weeks, ping, feedback on patch please.
Comment 3 Bastien Nocera 2015-01-28 11:55:19 UTC
(In reply to Rex Dieter from comment #2)
> another couple weeks, ping, feedback on patch please.

Something tested would be better. None of the fingerprint readers I have have that problem. I'd also need to know why those devices don't have power control sysfs files.
Comment 4 Zbigniew Jedrzejewski-Szmek 2015-01-28 13:30:57 UTC
When the kernel does not detect or have support for power control.

FWIW, it the pattern that existing systemd (and many other) rules use, see 42-usb-hid-pm.rules.
Comment 5 Bastien Nocera 2015-01-28 15:31:08 UTC
commit 79d79c3c875d41379eae418157a8254e87641f85
Author: Rex Dieter <rdieter@math.unl.edu>
Date:   Wed Dec 17 07:27:15 2014 -0600

    lib: Test before applying power saving udev rules
    
    add TEST=="power/control"... to test for the presence of the file
    before setting it.
    
    See https://bugzilla.redhat.com/show_bug.cgi?id=950205
    
    https://bugs.freedesktop.org/show_bug.cgi?id=87414


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.